--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js :
     - "0.12"
     - "4"
     - "5"
+    - "6"
 python:
     - "2.7"
 before_install:
@@ -12,3 +13,4 @@ before_install:
     - npm install -g npm
 before_script :
     - npm install -g grunt-cli
+sudo: false
