--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-scruffy",
   "description": "Grunt task to generate images from yuml diagram sources by scruffy",
-  "version": "0.2.1",
+  "version": "0.0.0-development",
   "homepage": "https://github.com/prantlf/grunt-scruffy",
   "author": {
     "name": "Ferdinand Prantl",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/prantlf/grunt-scruffy.git"
+    "url": "https://github.com/prantlf/grunt-scruffy.git"
   },
   "bugs": {
     "url": "https://github.com/prantlf/grunt-scruffy/issues"
@@ -28,7 +28,8 @@
   "scripts": {
     "test": "grunt",
     "check_coverage": "GRUNT_SCRUFFY_COVERAGE=1 grunt",
-    "post_coverage": "GRUNT_SCRUFFY_COVERAGE=1 grunt default coveralls"
+    "post_coverage": "GRUNT_SCRUFFY_COVERAGE=1 grunt default coveralls",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "dependencies": {
     "q": "^2.0.3"
@@ -42,7 +43,8 @@
     "grunt-istanbul": "^0.7.2",
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
-    "time-grunt": "^1.4.0"
+    "time-grunt": "^1.4.0",
+    "semantic-release": "^6.3.6"
   },
   "keywords": [
     "gruntplugin",
