chore(build): Include librsvg2-bin as scruffy's runtime dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
       - graphviz
       - plotutils
       - imagemagick
+      - librsvg2-bin
       - build-essential
       - g++-4.8
 env:
