--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "test": "grunt",
     "check_coverage": "GRUNT_SCRUFFY_COVERAGE=1 grunt",
     "post_coverage": "GRUNT_SCRUFFY_COVERAGE=1 grunt default coveralls",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "q": "^2.0.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-coveralls": "^1.0.1",
@@ -44,7 +44,7 @@
     "jshint-stylish": "^2.2.1",
     "load-grunt-tasks": "^3.5.2",
     "time-grunt": "^1.4.0",
-    "semantic-release": "^8.0.0"
+    "semantic-release": "^11.0.2"
   },
   "keywords": [
     "gruntplugin",
