doc: Update pre-requisities to run with python 2
Force Django <2.0.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ python:
   - "2.7"
 before_install:
   - pip install --user -U pip
+  - pip install --user 'django<2.0'
   - pip install --user image scruffy
   - npm install -g npm
 before_script:
