chore: Dropped support of Node.js 4
Some NPM dependencies dropped support of Node.js 4. It is easier to drop it
too, that looking for workarounds to get the testing build running, or claim
the support without actually testing it.

Add testing with Node.js 10.

BREAKING CHANGE: Dropped support of Node.js 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,21 +19,19 @@ addons:
 env:
   - CXX=g++-4.8
 node_js:
+  - '10'
   - '8'
   - '6'
-  - '4'
 python:
   - "2.7"
 before_install:
   - pip install --user -U pip
   - pip install --user 'django<2.0'
   - pip install --user image scruffy
-  - npm install -g npm
 before_script:
   - npm install -g grunt-cli
-  - npm prune
 after_success:
-  - npm run semantic-release
+  - npm run travis-deploy-once "npm run semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
